# codecrafters-kafka-rust

./: .gitignore  ;  Cargo.toml  README.md  ]  codecrafters.yml  codecrafters_test.txt
scripts/: local_client.sh  request
src/: \  api_keys.rs  api_response.rs  api_version_request.rs  api_version_v4_response.rs  byte_parsable.rs  compact_array.rs  compact_records.rs  compact_string.rs  error_codes.rs  macros.rs  main.rs  nullable_string.rs  partial_parsable.rs  serializable.rs  size.rs  tag_section.rs  tagged_fields_section.rs  unsigned_varint.rs
src/api_versions/: api_versions_api.rs  api_versions_request_v4.rs  api_versions_response_v4.rs  mod.rs
src/describe_topic_partitions/: describe_topic_partitions_api.rs  describe_topic_partitions_request_v0.rs  describe_topic_partitions_response_v0.rs  mod.rs
src/fetch/: fetch_api.rs  fetch_request_v16.rs  fetch_response_v16.rs  fetch_v16_request.rs  fetch_v16_response.rs  mod.rs  partition.rs  topic.rs
src/headers/: mod.rs  request_header_v1.rs  request_header_v2.rs  response_header_v0.rs  response_header_v1.rs
src/produce/: mod.rs  produce_api.rs  produce_request_v11.rs  produce_response_v11.rs
src/records/: feature_level_record.rs  metadata_record.rs  mod.rs  partition_record.rs  record_batch.rs  topic_record.rs
src/types/: compact_array.rs  compact_nullable.rs  compact_nullable_bytes.rs  compact_nullable_string.rs  compact_records.rs  compact_string.rs  mod.rs  nullable_string.rs  signed_varint.rs  unsigned_varint.rs  variable_integer.rs  varlong.rs  zig_zag_decoder.rs
src/utils/: config.rs  file.rs  mod.rs  (+2 more)
