[package]
name = "codecrafters-kafka"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
parameterized = "2.0.0"
thiserror = "1.0.38"                             # error handling

[dev-dependencies]
parameterized = "2.0.0"
rstest = "0.26.1"

[dependencies.uuid]
version = "1.18.1"
# Lets you generate random UUIDs
features = [
    "v4",
]
